apps/production/home-assistant/home-assistant-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    gethomepage.dev/href: "https://home-assistant.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Home assistant"
    gethomepage.dev/description: "Self-hosted home automation"
    gethomepage.dev/app: home-assistant
    gethomepage.dev/group: "Automation"
    gethomepage.dev/icon: "https://avatars.githubusercontent.com/u/13844975?s=48&v=4"
spec:
  entryPoints:
    - web
    - websecure    
  routes:
    - match: Host(`home-assistant.hephaestus.markmk.com`) || Host(`ha.hephaestus.markmk.com`)
      kind: Rule
      services:
        - name: home-assistant
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-code
  namespace: home-assistant
  annotations:
    gethomepage.dev/href: "https://home-assistant-code.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "VSCode - Home assistant"
    gethomepage.dev/description: "Code server for Home assistant"
    gethomepage.dev/app: home-assistant
    gethomepage.dev/group: "Automation"
    gethomepage.dev/icon: "https://code.visualstudio.com/assets/images/code-stable.png"
spec:
  entryPoints:
    - web
    - websecure    
  routes:
    - match: Host(`home-assistant-code.hephaestus.markmk.com`) || Host(`hacode.hephaestus.markmk.com`)
      kind: Rule
      services:
        - name: home-assistant-code
          port: http
